# Caio-Capstone-Project

./: CMakeLists.txt  README.md
src/: asteroid.cpp  asteroid.h  controller.cpp  controller.h  enemy.cpp  enemy.h  game.cpp  game.h  globals.h  main.cpp  player.cpp  player.h  renderer.cpp  renderer.h  starfield.cpp  starfield.h  test.cpp
